# dt4dds

./: Dockerfile  README.md  pyproject.toml  requirements.txt
demos/: advanced.py  basic.py  design_sequences.txt
dt4dds/: __init__.py  properties.py
dt4dds/analysis/: __init__.py  alignment.py  analysis.py  config.py  dataaggregation.py  errormapper.py  fileio.py  mapping.py  phix.fasta
dt4dds/datastructures/: __init__.py  seq.py  seqpool.py
dt4dds/helpers/: config.py  errorgenerator.py  generators.py  logging.py  step.py  tools.py
dt4dds/processes/: __init__.py  aging.py  array_synthesis.py  dilution.py  pcr.py  preparation.py  purification.py  sbs_sequencing.py
dt4dds/settings/: __init__.py  aging.yaml  array_synthesis_customarray.yaml  array_synthesis_customarray_GCall.yaml  array_synthesis_customarray_GCfix.yaml  array_synthesis_photolithographic.yaml  array_synthesis_twist.yaml  defaults.py  fixed_aging.yaml  iseq100.yaml  pcr_Q5.yaml  pcr_exo.yaml  pcr_hifi.yaml  pcr_taq.yaml  properties.yaml  settings.py
scripts/bunny_generations/: main.py
scripts/extreme_cases/: best.py  design_files.fasta  experiments.py  worst.py
scripts/internal_validation/Genscript_GCall/: Aging.py  PCR.py  design_files.fasta
scripts/internal_validation/Genscript_GCfix/: Aging.py  PCR.py  design_files.fasta
scripts/internal_validation/Twist_GCall/: Aging.py  PCR.py  design_files.fasta
scripts/internal_validation/Twist_GCfix/: Aging.py  PCR.py  design_files.fasta
