[build-system]
requires = ["setuptools>=60", "setuptools-scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"


[project]
name = "dt4dds"
authors = [
    {name = "Andreas Gimpel", email = "andreas.gimpel@chem.ethz.ch"},
]
description = "dt4dds is a Python package providing a customizable, digital representation of the widely-used DNA data storage workflow involving array synthesis, PCR, Aging, and Sequencing-By-Synthesis. By modelling each part of such user-defined workflows with fully customizable experimental parameters, dt4dds enables data-driven experimental design and rational design of redundancy. dt4dds also includes a pipeline for comprehensively analyzing errors in sequencing data, both from experiments and simulation."
readme = 'README.md'
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dynamic = ["version", "dependencies"]


[project.scripts]
dt4dds-analysis = "dt4dds.bin.analysis:single"
dt4dds-batchanalysis = "dt4dds.bin.analysis:batch"
dt4dds-clusteranalysis = "dt4dds.bin.analysis:cluster_single"
dt4dds-clusterbatchanalysis = "dt4dds.bin.analysis:cluster_batch"
dt4dds-scenario = "dt4dds.bin.scenario:main"
dt4dds-challenge = "dt4dds.bin.challenge:main"
dt4dds-utils = "dt4dds.bin.utils:main"


[tool.setuptools]
py-modules = ['dt4dds']
packages = ['dt4dds']


[tool.setuptools.dynamic]
version = {attr = "dt4dds.__VERSION__"}
dependencies = {file = ["requirements.txt"]}


[project.urls]
Homepage = "https://dt4dds.ethz.ch"
Repository = "https://github.com/fml-ethz/dt4dds"


[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools_scm